src/test/deca/context/invalid/created/binary_exp/op_bool/or_A_A.deca
// Description :
//    test or entre un A et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche A. Type droit A Type attendu: ‘boolean’
class A{}
{
A a;
A b;
boolean c = a || b;
}
